Fix primary navigation bug

--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -1,1 +1,9 @@
 /*! Custom navigation styles */
+
+.nav-menu {
+  ul {
+    @extend .nav !optional;
+    @extend .navbar-nav !optional;
+    @extend .navbar-right !optional;
+  }
+}
