Add Bootstrap navbar styles

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,14 +1,9 @@
-// colour palette
+// Colour palette
 
 
-// typography
+// Typography
 
-$h1: #111;
-$h2: #222;
-$h3: #333;
-$h4: #444;
-$h5: #555;
-$h6: #666;
+
 
 //Bootstrap Media queries
 
