--- a/scss/style.scss
+++ b/scss/style.scss
@@ -85,12 +85,16 @@ Text Domain: zdwpbs
 // Use WordPress' Twenty Fourteen theme
 //@import 'twentyfourteen';
 
+// Our custom styles
+
 @import 'base';
 
 @import 'wordpress';
 
 @import 'typography';
 @import 'navigation';
+@import 'ui';
+
 @import 'header';
 @import 'content';
 @import 'sidebar';
