--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -5,7 +5,7 @@
 
 
 
-//Bootstrap Media queries
+// Bootstrap Media queries
 
 $small: "only screen and (min-width: 768px)";
 $medium: "only screen and (min-width: 992px)";
@@ -14,11 +14,11 @@ $large: "only screen and (min-width: 1200px)";
 $portrait: "and (orientation: portrait)";
 $landscape: "and (orientation: landscape)";
 
-//Media Query hacks
+// Media Query hacks
 $mobile-only: "only screen and (max-width: 767px)";
 $tablet-only: "only screen and (min-width: 768px) and (max-width: 991px)";
 
-//Retina mega-query!
+// Retina mega-query!
 $retina: "only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (min--moz-device-pixel-ratio: 2),
 only screen and (-o-min-device-pixel-ratio: 2/1),
@@ -26,14 +26,14 @@ only screen and (min-device-pixel-ratio: 2),
 only screen and (min-resolution: 192dpi),
 only screen and (min-resolution: 2dppx)";
 
-//functions
+// Functions
 
 $em-base: 14px !default;
 @function emCalc($pxWidth) {
   @return $pxWidth / $em-base * 1em;
 }
 
-// mixins
+// Mixins
 
 // rem font sizing
 html {
@@ -51,9 +51,9 @@ html {
   line-height: $line-height;
 }
 
-//helper classes
+// Helper classes
 
-//Mobile-friendly transition fix
+// Mobile-friendly transition fix
 .mobile-friendly {
   @include translate3d(0,0,0);
 }
@@ -97,4 +97,10 @@ html {
     width: 100%;
     height: 100%;
   }
+}
+
+// Basic resets
+
+code {
+  white-space: normal;
 }
