Make the sidebar search form look better by default

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,3 +1,11 @@
-#secondary {
-
+//Make the sidebar search form look presentable
+#primary-sidebar {
+  .search-form {
+    label {
+      width: 70%;
+    }
+    .search-submit {
+      float: right;
+    }
+  }
 }
