--- a/scss/_wordpress.scss
+++ b/scss/_wordpress.scss
@@ -1,4 +1,13 @@
 /**
+ * 6.3 Entry Meta
+ * -----------------------------------------------------------------------------
+ */
+
+.sticky .entry-date {
+  display: none;
+}
+
+/**
  * 6.4 Entry Content
  * -----------------------------------------------------------------------------
  */
