--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,4 +1,5 @@
-//Make the sidebar search form look presentable
+//Make the sidebar search form look presentable by default
+
 #primary-sidebar {
   .search-form {
     label {
