--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,1 +1,10 @@
 /*! Custom footer styles */
+
+//Default footer styles
+
+footer#colophon {
+  padding: emCalc(20px) 0;
+  background-color: #F8F8F8;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
