--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,12 @@
 /*! Custom header styles */
 
+// Simple default style for a short header bar
 #masthead {
   .site-title {
     margin: 4px 0 0 0;
+
+    a {
+      text-decoration: none;
+    }
   }
 }
