--- a/scss/_ie.scss
+++ b/scss/_ie.scss
@@ -1,1 +1,11 @@
 /*! Custom IE styles */
+
+// Style overrides for IE8 and earlier
+.lt-ie9 {
+
+}
+
+// Style overrides for IE7 and earlier
+.lt-ie8 {
+
+}
