--- a/scss/_ui.scss
+++ b/scss/_ui.scss
@@ -1,33 +1,16 @@
 /*! Custom UI styles */
 
+// Semantic styling of form elements
+
+form {
+  p {
+    @extend .form-group !optional;
+  }
+}
+
 input[type="submit"] {
   @extend .btn !optional;
 }
-
-
-//color
-//date
-//datetime
-//datetime-local
-//email
-//month
-//number
-//range
-//search
-//tel
-//time
-//url
-//week
-
-//$text_inputs: 'input[type="text"],
-//input[type="email"],
-//input[type="password"],
-//input[type="tel"],
-//input[type="datetime"],
-//input[type="number"],
-//input[type="search"],
-//input[type="url"]';
-
 
 textarea,
 input[type="text"],
@@ -39,4 +22,8 @@ input[type="number"],
 input[type="search"],
 input[type="url"] {
   @extend .form-control !optional;
+}
+
+.required {
+  color: $brand-danger;
 }
