--- a/css/style.css
+++ b/css/style.css
@@ -2302,7 +2302,7 @@ input[type="date"] {
 }
 
 /* line 184, ../bootstrap/bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/_forms.scss */
-.form-group {
+.form-group, form p {
   margin-bottom: 15px;
 }
 
@@ -2600,7 +2600,7 @@ select[multiple].input-lg {
 
 @media (min-width: 768px) {
   /* line 338, ../bootstrap/bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/_forms.scss */
-  .form-inline .form-group, .navbar-form .form-group {
+  .form-inline .form-group, .navbar-form .form-group, .form-inline form p, form .form-inline p, .navbar-form form p, form .navbar-form p {
     display: inline-block;
     margin-bottom: 0;
     vertical-align: middle;
@@ -2691,17 +2691,17 @@ select[multiple].input-lg {
   min-height: 27px;
 }
 /* line 413, ../bootstrap/bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/_forms.scss */
-.form-horizontal .form-group {
+.form-horizontal .form-group, .form-horizontal form p, form .form-horizontal p {
   margin-left: -15px;
   margin-right: -15px;
 }
 /* line 21, ../bootstrap/bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/_mixins.scss */
-.form-horizontal .form-group:before, .form-horizontal .form-group:after {
+.form-horizontal .form-group:before, .form-horizontal form p:before, form .form-horizontal p:before, .form-horizontal .form-group:after, .form-horizontal form p:after, form .form-horizontal p:after {
   content: " ";
   display: table;
 }
 /* line 25, ../bootstrap/bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/_mixins.scss */
-.form-horizontal .form-group:after {
+.form-horizontal .form-group:after, .form-horizontal form p:after, form .form-horizontal p:after {
   clear: both;
 }
 /* line 417, ../bootstrap/bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/_forms.scss */
@@ -3738,7 +3738,7 @@ input[type="button"].btn-block {
 }
 @media (max-width: 767px) {
   /* line 304, ../bootstrap/bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap/_navbar.scss */
-  .navbar-form .form-group {
+  .navbar-form .form-group, .navbar-form form p, form .navbar-form p {
     margin-bottom: 5px;
   }
 }
@@ -4055,18 +4055,13 @@ input[type="button"].btn-block {
   position: fixed;
 }
 
-/* line 39, ../scss/_base.scss */
-html {
-  font-size: 62.5%;
-}
-
-/* line 63, ../scss/_base.scss */
+/* line 57, ../scss/_base.scss */
 .mobile-friendly {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 68, ../scss/_base.scss */
+/* line 62, ../scss/_base.scss */
 .ir {
   background-color: transparent;
   border: 0;
@@ -4074,7 +4069,7 @@ html {
   *text-indent: -9999px;
 }
 
-/* line 75, ../scss/_base.scss */
+/* line 69, ../scss/_base.scss */
 .ir:before {
   content: "";
   display: block;
@@ -4082,8 +4077,8 @@ html {
   height: 150%;
 }
 
-/* Flex Video */
-/* line 83, ../scss/_base.scss */
+/* Flex Video - from Foundation */
+/* line 77, ../scss/_base.scss */
 .flex-video {
   position: relative;
   padding-top: 1.5625em;
@@ -4092,15 +4087,15 @@ html {
   margin-bottom: 1em;
   overflow: hidden;
 }
-/* line 91, ../scss/_base.scss */
+/* line 85, ../scss/_base.scss */
 .flex-video.widescreen {
   padding-bottom: 57.25%;
 }
-/* line 95, ../scss/_base.scss */
+/* line 89, ../scss/_base.scss */
 .flex-video.vimeo {
   padding-top: 0;
 }
-/* line 99, ../scss/_base.scss */
+/* line 93, ../scss/_base.scss */
 .flex-video iframe, .flex-video object, .flex-video embed, .flex-video video {
   position: absolute;
   top: 0;
@@ -4109,7 +4104,7 @@ html {
   height: 100%;
 }
 
-/* line 110, ../scss/_base.scss */
+/* line 104, ../scss/_base.scss */
 code {
   white-space: normal;
 }
@@ -4502,9 +4497,14 @@ code {
   vertical-align: text-bottom;
 }
 
+/* line 345, ../scss/_wordpress.scss */
+.comment-list {
+  list-style-type: none;
+}
+
 @media only screen and (min-width: 992px) {
   /* Genericons */
-  /* line 353, ../scss/_wordpress.scss */
+  /* line 354, ../scss/_wordpress.scss */
   .primary-navigation .menu-item-has-children > a:after,
   .primary-navigation .page_item_has_children > a:after {
     -webkit-font-smoothing: antialiased;
@@ -4517,7 +4517,7 @@ code {
     vertical-align: text-bottom;
   }
 
-  /* line 367, ../scss/_wordpress.scss */
+  /* line 368, ../scss/_wordpress.scss */
   .primary-navigation .menu-item-has-children li.menu-item-has-children > a:after,
   .primary-navigation .menu-item-has-children li.page_item_has_children > a:after,
   .primary-navigation .page_item_has_children li.menu-item-has-children > a:after,
@@ -4527,7 +4527,7 @@ code {
     top: 20px;
   }
 
-  /* line 373, ../scss/_wordpress.scss */
+  /* line 374, ../scss/_wordpress.scss */
   .secondary-navigation .menu-item-has-children > a:after {
     -webkit-font-smoothing: antialiased;
     content: "\f501";
@@ -4540,12 +4540,12 @@ code {
   }
 }
 @media only screen and (min-width: 1200px) {
-  /* line 389, ../scss/_wordpress.scss */
+  /* line 390, ../scss/_wordpress.scss */
   .site-description {
     display: block;
   }
 
-  /* line 393, ../scss/_wordpress.scss */
+  /* line 394, ../scss/_wordpress.scss */
   .site-description:empty {
     margin: 0;
   }
@@ -4553,10 +4553,19 @@ code {
 /*! Custom typography styles */
 /*! Custom navigation styles */
 /*! Custom UI styles */
+/* line 27, ../scss/_ui.scss */
+.required {
+  color: #d9534f;
+}
+
 /*! Custom header styles */
-/* line 4, ../scss/_header.scss */
+/* line 5, ../scss/_header.scss */
 #masthead .site-title {
   margin: 4px 0 0 0;
+}
+/* line 8, ../scss/_header.scss */
+#masthead .site-title a {
+  text-decoration: none;
 }
 
 /*! Custom content styles */
@@ -4638,17 +4647,41 @@ code {
   }
 }
 
-/* line 20, ../scss/_content.scss */
+/* line 21, ../scss/_content.scss */
 #main-content > #primary.content-area {
   float: none;
   width: auto;
   padding: 0;
 }
 
-/* line 5, ../scss/_sidebar.scss */
-#primary-sidebar h1 {
+/* line 27, ../scss/_content.scss */
+#main {
+  margin-bottom: 1.42857em;
+}
+
+/* line 32, ../scss/_content.scss */
+.page-title,
+.archive-title {
+  font-size: 30px;
+  font-size: 3rem;
+  color: black;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+/* line 36, ../scss/_content.scss */
+.entry-title {
   font-size: 24px;
   font-size: 2.4rem;
+  color: black;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+/* line 5, ../scss/_sidebar.scss */
+#primary-sidebar h1 {
+  font-size: 18px;
+  font-size: 1.8rem;
   color: black;
   font-weight: 400;
   line-height: 1.5;
@@ -4663,5 +4696,13 @@ code {
 }
 
 /*! Custom footer styles */
+/* line 5, ../scss/_footer.scss */
+footer#colophon {
+  padding: 1.42857em 0;
+  background-color: #F8F8F8;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
+
 /*! Custom print styles */
 /*! Custom IE styles */
