--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@
 //Default footer styles
 
 footer#colophon {
-  padding: emCalc(20px) 0;
+  padding: rem(20px) 0;
   background-color: #F8F8F8;
   border-top: 1px solid #e7e7e7;
   border-bottom: 1px solid #e7e7e7;
